# tinyobjviewer

./: .gitignore  .gitmodules  CMakeLists.txt
_build/: tinyobjviewer
_build/ext_build/tinyobjloader/: tinyobjloader-targets.cmake  tinyobjloader.pc
src/: Mesh.cpp  Mesh.h  Viewer.cpp  Viewer.h  main.cpp
